--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,16 +17,6 @@ repos:
           "--line-length=248"
         ]
 
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.1.1
-    hooks:
-      - id: flake8
-        additional_dependencies: [flake8-bugbear==23.3.23]
-        args:
-          - --ignore=E203,E302,E303,E305,W503,B950,F401,F403,F405,E731,B001,B006,B007,F841,E741,E266,F541,E722,F821
-          - --max-line-length=248
-          - --extend-ignore=E501
-
   - repo: https://github.com/adamchainz/blacken-docs
     rev: 1.19.1
     hooks:
@@ -39,8 +29,18 @@ repos:
         language_version: python3.9
         args:
           - --line-length=248
-          - --skip-string-normalization
+          # - --skip-string-normalization
           - --exclude=/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
+    hooks:
+      - id: flake8
+        # additional_dependencies: [flake8-bugbear==23.3.23]
+        args:
+          - --ignore=E203,E302,E303,E305,W503,B950,F401,F403,F405,E731,B001,B006,B007,F841,E741,E266,F541,E722,F821
+          - --max-line-length=248
+          - --extend-ignore=E501
 
   - repo: https://github.com/pre-commit/mirrors-clang-format
     rev: v19.1.5
